Fixed NaN sortCells issue and z-index issue

--- a/crystal.css
+++ b/crystal.css
@@ -214,6 +214,7 @@ a:visited { text-decoration: none; color:#414141;}
 }
 
 #hcpHighlightTypeSelector {
+  z-index: 20;
   font-size: 1.5em;
   position: absolute;
   float: right;
@@ -256,6 +257,7 @@ a:visited { text-decoration: none; color:#414141;}
 }
 
 #controlContainer {
+  z-index: 20;
   font-size: 1.5em;
   position: absolute;
   float: left;
